	  sam_autoleds.c:  Add support for the buttons and LEDs on-board the
	  SAMA5D3x-EK (2013-7-24).
	* configs/sama5d3x-ek/ostest/defconfig:  Switch console to USART1
	  (2013-7-4).
	* arch/arm/src/sam34/Kconfig and drivers/serial/Kconfig:  All serial
	  configuration logic for USARTs needs to depend on if the USART is
	  configured as a UART or not.  And this is for all CPUS, not just
	  SAM3/4 (2013-7-24).
	* arch/arm/src/arm/up_head.S and arch/arm/src/armv7-a/arm_head.S:
	  Fix a bug (uninitialized register error) that crept in the ARM9
	  boot-up code several years ago and was cloned into the Cortex-A5
	  code.  Obviously no one has used the ARM9 NuttX port for years!
	* Many files:  Finally... I changed the naming to of configuration
	  variables like CONFIG_DRAM_ to CONFIG_RAM_.  This has bothered
	  me for a long time since most boards don't have DRAM.  The more
	  generic RAM naming should not produce so much cognitive dissonance
	  (2013-7-26).
	* configs/sama5d3x-ek/hello:  Added a tiny hello world configuration
	  to simplify bring up of the SAMA5 (it will probably be removed
	  later) (2013-7-26).
	* The sama5d3x-ek/hello now runs correctly (2013-7-28).
	* configs/sama5d3x-ek/ostest/:  This configuration has been modified
	  to run out NOR flash.  More work is still needed to reconfigure the
	  SMC so the the NOR flash can work with the high clock (2013-7-28).
	* arch/arm/src/sama5/sam_clockconfig.c/h and
	  configs/sama5d3x-ek/src/sam_norflash.c:  Add a file structure that
	  will (eventually) support reconfiguration of NOR flash when NuttX
	  boots from NOR FLASH (2013-7-29).
	* arch/arm/src/sama5/chip/sam_hsmc/h:  SAMA5 HSMC register
	  defintion file (2013-7-29)
	* configs/sama5d3x-ek/src/sam_norflash.c:  Add board specific
	  logic to re-configure the SAMA5D3x-EK NOR FLASH before while
	  running out of NOR FLASH.  We need to change the NOR FLASH
	  timing BEFORE increasing the main clock (2013-7-29).
