@@ -20,7 +20,7 @@ CONFIG_WINDOWS_CYGWIN=y
 #
 # Build Configuration
 #
-# CONFIG_APPS_DIR="../apps"
+CONFIG_APPS_DIR="../apps"
 # CONFIG_BUILD_2PASS is not set
 
 #
@@ -168,11 +168,21 @@ CONFIG_SAMA5_USART1=y
 # External Memory Configuration
 #
 # CONFIG_SAMA5_DDRCS is not set
-# CONFIG_SAMA5_EBICS0 is not set
+CONFIG_SAMA5_EBICS0=y
+CONFIG_SAMA5_EBICS0_SIZE=134217728
+# CONFIG_SAMA5_EBICS0_SRAM is not set
+# CONFIG_SAMA5_EBICS0_PSRAM is not set
+# CONFIG_SAMA5_EBICS0_PROM is not set
+# CONFIG_SAMA5_EBICS0_EEPROM is not set
+# CONFIG_SAMA5_EBICS0_EPROM is not set
+# CONFIG_SAMA5_EBICS0_LCD is not set
+CONFIG_SAMA5_EBICS0_NOR=y
+# CONFIG_SAMA5_EBICS0_NAND is not set
 # CONFIG_SAMA5_EBICS1 is not set
 # CONFIG_SAMA5_EBICS2 is not set
 # CONFIG_SAMA5_EBICS3 is not set
 CONFIG_SAMA5_BOOT_ISRAM=y
+# CONFIG_SAMA5_BOOT_CS0FLASH is not set
 
 #
 # Heap Configuration
@@ -199,9 +209,6 @@ CONFIG_ARCH_STACKDUMP=y
 #
 CONFIG_BOARD_LOOPSPERMSEC=16717
 # CONFIG_ARCH_CALIBRATION is not set
-CONFIG_RAM_START=0x00300000
-CONFIG_RAM_VSTART=0x00300000
-CONFIG_RAM_SIZE=114688
 CONFIG_ARCH_HAVE_INTERRUPTSTACK=y
 CONFIG_ARCH_INTERRUPTSTACK=0
 
@@ -213,6 +220,13 @@ CONFIG_ARCH_INTERRUPTSTACK=0
 CONFIG_BOOT_RUNFROMISRAM=y
 # CONFIG_BOOT_RUNFROMSDRAM is not set
 # CONFIG_BOOT_COPYTORAM is not set
+
+#
+# Boot Memory Configuration
+#
+CONFIG_RAM_START=0x00300000
+CONFIG_RAM_VSTART=0x00300000
+CONFIG_RAM_SIZE=114688
 
 #
 # Board Selection
@@ -233,6 +247,7 @@ CONFIG_ARCH_HAVE_IRQBUTTONS=y
 #
 # Board-Specific Options
 #
+CONFIG_SAMA5_NOR_MAIN=y
 
 #
 # RTOS Features
@@ -257,7 +272,7 @@ CONFIG_SCHED_WAITPID=y
 # CONFIG_SCHED_STARTHOOK is not set
 # CONFIG_SCHED_ATEXIT is not set
 # CONFIG_SCHED_ONEXIT is not set
-CONFIG_USER_ENTRYPOINT="hello_main"
+CONFIG_USER_ENTRYPOINT="nor_main"
 CONFIG_DISABLE_OS_API=y
 # CONFIG_DISABLE_CLOCK is not set
 # CONFIG_DISABLE_POSIX_TIMERS is not set
